--- a/main.css
+++ b/main.css
@@ -10,3 +10,79 @@
   margin: 0 auto;  
   width: 720px;
 }
+
+
+h1 {
+  text-align: center;
+  padding: 10px 0 0 0;
+  margin: 0px;
+  color: #FAFAFA;
+}
+
+.headerbar {
+  background: #408DD2;
+  height: 150px;
+
+}
+
+
+#registration {
+  margin: 0 auto;
+  border: 1px solid grey;
+  width: 35%;
+  padding: 10px;
+  border-radius: 10px;
+  background-image: -webkit-linear-gradient(top, rgba(181,189,200,1) 0%,rgba(130,140,149,1) 36%,rgba(40,52,59,1) 100%);
+}
+
+input[type='email'] {
+position: relative;
+top: 100px;
+}
+
+input[type='password'] {
+width:100px;
+}
+
+input[type='submit'] {
+  color: white;
+  box-shadow: white;
+
+}
+
+button[type='submit'] {
+  color: white;
+  background: #474f57;
+  position:relative;
+  left: 120px;
+  bottom: 22px;
+}
+
+.navbar {
+ text-align: center;
+ padding-top: 20px;
+}
+
+.navbar li {
+  display:inline;
+  padding: 30px;
+}
+
+.navbar li a {
+  text-decoration: none;
+}
+
+.navbar li a:link, a:visited {
+  color: #FFB273;
+}
+
+#tour {
+  height: 1800x;
+  margin-top: 200px;
+} 
+
+#pricing, #about, #contact {
+  height: 800px;
+}
+
+
